--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start -hot"
+    "start": "next start"
   },
   "keywords": [],
   "author": "",
